objects/Training_Test__c.object
<CustomObject><fields>
        <fullName>Associated_Course__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Associated Course</label>
        <referenceTo>Course__c</referenceTo>
        <relationshipLabel>Training Tests</relationshipLabel>
        <relationshipName>Training_Tests</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Passing_Score_1__c</fullName>
        <label>Passing Score 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Passing_Score_2__c</fullName>
        <label>Passing Score 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Retired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableChangeDataCapture>false</enableChangeDataCapture><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>false</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>Private</externalSharingModel><label>Training Test</label><nameField>
        <label>Test Name</label>
        <type>Text</type>
    </nameField><pluralLabel>Training Tests</pluralLabel><sharingModel>ReadWrite</sharingModel><visibility>Public</visibility><listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Passing_Score_1__c</columns>
        <columns>Passing_Score_2__c</columns>
        <columns>Associated_Course__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews><validationRules>
        <fullName>Passing_Scores</fullName>
        <active>true</active>
        <errorConditionFormula>OR ( AND(NOT(ISBLANK( Passing_Score_1__c)), Passing_Score_1__c &lt;0), AND(NOT(ISBLANK( Passing_Score_2__c)), Passing_Score_2__c &lt;0))</errorConditionFormula>
        <errorMessage>Please enter a valid score in Passing Score fields</errorMessage>
    </validationRules></CustomObject>